2009-02-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Core/SystemAssemblyService.cs: In
	  GetAssemblyFromFullName, if package is null, prefer GAC
	  packages.

2009-02-26  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Core.csproj:
	* MonoDevelop.Core/ComponentModelLocalization.cs: Worked on
	  propertygrid localization.

2009-02-25  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Serialization/ItemProperty.cs: An element
	  which only has the ctype (type name) attribute is now
	  considered empty when checking the SkipEmpty property.

2009-02-20  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Core/SystemAssemblyService.cs: Add
	  Mac-compatible pkgconfig sniffing

2009-02-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Core/StringParserService.cs: fixed "Bug 456971 -
	  ${ProjectDir} Not updating for currently building project".

2009-02-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core/SystemAssemblyService.cs: Added some logic
	  for automatically checking if a package is GACed or not.

2009-02-17  Lluis Sanchez Gual  <lluis@novell.com>

	* frameworks.xml: Added mscorlib to frameworks.
	  System.Deployment belongs to 2.0.

	* MonoDevelop.Core.Execution/ProcessService.cs:
	* MonoDevelop.Core.Execution/ProcessHostController.cs: Allow
	  specifying an execution handler when creating a remote
	  process object. Added method for explicitly disposing a
	  remote object with a timeout.

	* Makefile.am:
	* MonoDevelop.Core.csproj: Updated.

	* MonoDevelop.Core/SystemPackage.cs:
	* MonoDevelop.Core/SystemAssembly.cs:
	* MonoDevelop.Core/SystemAssemblyService.cs: Improved handling
	  of assemblies with the same version provided by different
	  packages. Added support for IsGacPackage flag.

2009-02-11  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Serialization/DataContext.cs: Added api for
	  getting the list of registered types.
